--- a/template/cap-conclusoes.tex
+++ b/template/cap-conclusoes.tex
@@ -1,9 +1,9 @@
 %% ------------------------------------------------------------------------- %%
-\chapter{Conclusões}
+\chapter{ConclusÃµes}
 \label{cap:conclusoes}
 
 Texto texto texto texto texto texto texto texto texto texto texto texto texto
 texto texto texto texto texto texto texto texto texto texto texto texto texto
-texto texto texto texto texto texto\footnote{Exemplo de referência para página
+texto texto texto texto texto texto\footnote{Exemplo de referÃªncia para pÃ¡gina
 Web: \url{www.vision.ime.usp.br/~jmena/stuff/tese-exemplo}}.
 
