--- a/template/monografia_template.tex
+++ b/template/monografia_template.tex
@@ -3,12 +3,12 @@
 % Adaptado em julho/2015 a partir do
 %
 % ---------------------------------------------------------------------------- %
-% Arquivo LaTeX de exemplo de dissertaÁ„o/tese a ser apresentados ‡ CPG do IME-USP
+% Arquivo LaTeX de exemplo de disserta√ß√£o/tese a ser apresentados √† CPG do IME-USP
 %
-% Vers„o 5: Sex Mar  9 18:05:40 BRT 2012
+% Vers√£o 5: Sex Mar  9 18:05:40 BRT 2012
 %
-% CriaÁ„o: Jes˙s P. Mena-Chalco
-% Revis„o: Fabio Kon e Paulo Feofiloff
+% Cria√ß√£o: Jes√∫s P. Mena-Chalco
+% Revis√£o: Fabio Kon e Paulo Feofiloff
 
 
 \documentclass[12pt,twoside,a4paper]{book}
@@ -18,17 +18,17 @@
 % Pacotes 
 \usepackage[T1]{fontenc}
 \usepackage[brazil]{babel}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[pdftex]{graphicx}           % usamos arquivos pdf/png como figuras
-\usepackage{setspace}                   % espaÁamento flexÌvel
-\usepackage{indentfirst}                % indentaÁ„o do primeiro par·grafo
-\usepackage{makeidx}                    % Ìndice remissivo
+\usepackage{setspace}                   % espa√ßamento flex√≠vel
+\usepackage{indentfirst}                % indenta√ß√£o do primeiro par√°grafo
+\usepackage{makeidx}                    % √≠ndice remissivo
 \usepackage[nottoc]{tocbibind}          % acrescentamos a bibliografia/indice/conteudo no Table of Contents
 \usepackage{courier}                    % usa o Adobe Courier no lugar de Computer Modern Typewriter
-\usepackage{type1cm}                    % fontes realmente escal·veis
-\usepackage{listings}                   % para formatar cÛdigo-fonte (ex. em Java)
+\usepackage{type1cm}                    % fontes realmente escal√°veis
+\usepackage{listings}                   % para formatar c√≥digo-fonte (ex. em Java)
 \usepackage{titletoc}
-%\usepackage[bf,small,compact]{titlesec} % cabeÁalhos dos tÌtulos: menores e compactos
+%\usepackage[bf,small,compact]{titlesec} % cabe√ßalhos dos t√≠tulos: menores e compactos
 \usepackage[fixlanguage]{babelbib}
 \usepackage[font=small,format=plain,labelfont=bf,up,textfont=it,up]{caption}
 \usepackage[usenames,svgnames,dvipsnames]{xcolor}
@@ -36,12 +36,12 @@
 %\usepackage[pdftex,plainpages=false,pdfpagelabels,pagebackref,colorlinks=true,citecolor=black,linkcolor=black,urlcolor=black,filecolor=black,bookmarksopen=true]{hyperref} % links em preto
 \usepackage[pdftex,plainpages=false,pdfpagelabels,pagebackref,colorlinks=true,citecolor=DarkGreen,linkcolor=NavyBlue,urlcolor=DarkRed,filecolor=green,bookmarksopen=true]{hyperref} % links coloridos
 \usepackage[all]{hypcap}                    % soluciona o problema com o hyperref e capitulos
-\usepackage[round,sort,nonamebreak]{natbib} % citaÁ„o bibliogr·fica textual(plainnat-ime.bst)
-\usepackage{emptypage}  % para n„o colocar n˙mero de p·gina em p·gina vazia
+\usepackage[round,sort,nonamebreak]{natbib} % cita√ß√£o bibliogr√°fica textual(plainnat-ime.bst)
+\usepackage{emptypage}  % para n√£o colocar n√∫mero de p√°gina em p√°gina vazia
 \fontsize{60}{62}\usefont{OT1}{cmr}{m}{n}{\selectfont}
 
 % ---------------------------------------------------------------------------- %
-% CabeÁalhos similares ao TAOCP de Donald E. Knuth
+% Cabe√ßalhos similares ao TAOCP de Donald E. Knuth
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
@@ -50,20 +50,20 @@
 \renewcommand{\headrulewidth}{0pt}
 
 % ---------------------------------------------------------------------------- %
-\graphicspath{{./figuras/}}             % caminho das figuras (recomend·vel)
-\frenchspacing                          % arruma o espaÁo: id est (i.e.) e exempli gratia (e.g.) 
-\urlstyle{same}                         % URL com o mesmo estilo do texto e n„o mono-spaced
-\makeindex                              % para o Ìndice remissivo
-\raggedbottom                           % para n„o permitir espaÁos extra no texto
+\graphicspath{{./figuras/}}             % caminho das figuras (recomend√°vel)
+\frenchspacing                          % arruma o espa√ßo: id est (i.e.) e exempli gratia (e.g.)
+\urlstyle{same}                         % URL com o mesmo estilo do texto e n√£o mono-spaced
+\makeindex                              % para o √≠ndice remissivo
+\raggedbottom                           % para n√£o permitir espa√ßos extra no texto
 \fontsize{60}{62}\usefont{OT1}{cmr}{m}{n}{\selectfont}
 \cleardoublepage
 \normalsize
 
 % ---------------------------------------------------------------------------- %
-% OpÁıes de listing usados para o cÛdigo fonte
+% Op√ß√µes de listing usados para o c√≥digo fonte
 % Ref: http://en.wikibooks.org/wiki/LaTeX/Packages/Listings
 \lstset{ %
-language=Java,                  % choose the language of the code
+language=Ruby,                  % choose the language of the code
 basicstyle=\footnotesize,       % the size of the fonts that are used for the code
 numbers=left,                   % where to put the line-numbers
 numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
@@ -92,182 +92,187 @@ framexrightmargin=10pt
 % Corpo do texto
 \begin{document}
 
-\frontmatter 
-% cabeÁalho para as p·ginas das seÁıes anteriores ao capÌtulo 1 (frontmatter)
-\fancyhead[RO]{{\footnotesize\rightmark}\hspace{2em}\thepage}
-\setcounter{tocdepth}{2}
-\fancyhead[LE]{\thepage\hspace{2em}\footnotesize{\leftmark}}
-\fancyhead[RE,LO]{}
-\fancyhead[RO]{{\footnotesize\rightmark}\hspace{2em}\thepage}
+    \frontmatter
+    % cabe√ßalho para as p√°ginas das se√ß√µes anteriores ao cap√≠tulo 1 (frontmatter)
+    \fancyhead[RO]{{\footnotesize\rightmark}\hspace{2em}\thepage}
+    \setcounter{tocdepth}{2}
+    \fancyhead[LE]{\thepage\hspace{2em}\footnotesize{\leftmark}}
+    \fancyhead[RE,LO]{}
+    \fancyhead[RO]{{\footnotesize\rightmark}\hspace{2em}\thepage}
 
-\onehalfspacing  % espaÁamento
+    \onehalfspacing  % espa√ßamento
 
-% ---------------------------------------------------------------------------- %
-% CAPA
-\thispagestyle{empty}
-\begin{center}
-    \vspace*{2.3cm}
-    Universidade de S„o Paulo\\
-    Instituto de Matem·tica e EstatÌstica\\
-    Bachalerado em CiÍncia da ComputaÁ„o
+    % ---------------------------------------------------------------------------- %
+    % CAPA
+    \thispagestyle{empty}
+    \begin{center}
+        \vspace*{2.3cm}
+        Universidade de S√£o Paulo\\
+        Instituto de Matem√°tica e Estat√≠stica\\
+        Bachalerado em Ci√™ncia da Computa√ß√£o
 
 
-    \vspace*{3cm}
-    \Large{Nome completo do Autor}
-    
+        \vspace*{3cm}
+        \Large{Andr√© Luiz Abdalla Silveira}
 
-    \vspace{3cm}
-    \textbf{\Large{TÌtulo da monografia \\
-    se for longo ocupa esta linha tambÈm}}
-    
-       
-    \vskip 5cm
-    \normalsize{S„o Paulo}
 
-    \normalsize{Dezembro de 2015}
-\end{center}
+        \vspace{3cm}
+        \textbf{\Large{Fic√ß√£o Interativa: \\
+        levando divers√£o e culura al√©m do c√≥digo}}
 
-% ---------------------------------------------------------------------------- %
-% P·gina de rosto
-%
-\newpage
-\thispagestyle{empty}
+
+        \vskip 5cm
+        \normalsize{S√£o Paulo}
+
+        \normalsize{Novembro de 2018}
+    \end{center}
+
+    % ---------------------------------------------------------------------------- %
+    % P√°gina de rosto
+    %
+    \newpage
+    \thispagestyle{empty}
     \begin{center}
         \vspace*{2.3 cm}
-        \textbf{\Large{TÌtulo da monografia \\
-    se for longo ocupa esta linha tambÈm}}
+        \textbf{\Large{Fic√ß√£o Interativa: \\
+        levando divers√£o e culura al√©m do c√≥digo}}
         \vspace*{2 cm}
     \end{center}
 
     \vskip 2cm
 
     \begin{flushright}
-	Monografia final da disciplina \\
+        Monografia final da disciplina \\
         MAC0499 -- Trabalho de Formatura Supervisionado.
     \end{flushright}
 
     \vskip 5cm
 
     \begin{center}
-    Supervisor: Prof. Dr. Nome do Supervisor\\
-    $[$ Cosupervisor: Prof. Dr. Nome do Cosupervisor $]$
+        Supervisor: Prof. Dr. Marco Dimas Gubitoso
 
-    \vskip 5cm
-    \normalsize{S„o Paulo}
+        \vskip 5cm
+        \normalsize{S√£o Paulo}
 
-    \normalsize{Dezembro de 2015}
+        \normalsize{Novembro de 2018}
     \end{center}
-\pagebreak
+    \pagebreak
 
 
 
 
-\pagenumbering{roman}     % comeÁamos a numerar 
+    \pagenumbering{roman}     % come√ßamos a numerar
 
-%% % ---------------------------------------------------------------------------- %
-%% % Agradecimentos:
-%% % Se o candidato n„o quer fazer agradecimentos, deve simplesmente eliminar esta p·gina 
-%% \chapter*{Agradecimentos}
-%% Texto texto texto texto texto texto texto texto texto texto texto texto texto
-%% texto texto texto texto texto texto texto texto texto texto texto texto texto
-%% texto texto texto texto texto texto texto texto texto texto texto texto texto
-%% texto texto texto texto. Texto opcional.
-
-
-
-% ---------------------------------------------------------------------------- %
-% Resumo
-\chapter*{Resumo}
-
-Elemento obrigatÛrio, constituÌdo de uma sequÍncia de frases concisas e
-objetivas, em forma de texto.  Deve apresentar os objetivos, mÈtodos empregados,
-resultados e conclusıes.  O resumo deve ser redigido em par·grafo ˙nico, conter
-no m·ximo 500 palavras e ser seguido dos termos representativos do conte˙do do
-trabalho (palavras-chave).
-\\
-
-\noindent \textbf{Palavras-chave:} palavra-chave1, palavra-chave2, palavra-chave3.
-
-% ---------------------------------------------------------------------------- %
-% Abstract
-\chapter*{Abstract}
-
-Elemento obrigatÛrio, elaborado com as mesmas caracterÌsticas do resumo em
-lÌngua portuguesa.
-\\
-
-\noindent \textbf{Keywords:} keyword1, keyword2, keyword3.
-
-
-% ---------------------------------------------------------------------------- %
-% Sum·rio
-\tableofcontents    % imprime o sum·rio
+    %% % ---------------------------------------------------------------------------- %
+    %% % Agradecimentos:
+    %% % Se o candidato n√£o quer fazer agradecimentos, deve simplesmente eliminar esta p√°gina
+    %% \chapter*{Agradecimentos}
+    %% Texto texto texto texto texto texto texto texto texto texto texto texto texto
+    %% texto texto texto texto texto texto texto texto texto texto texto texto texto
+    %% texto texto texto texto texto texto texto texto texto texto texto texto texto
+    %% texto texto texto texto. Texto opcional.
 
 
 
+    % ---------------------------------------------------------------------------- %
+    % Resumo
+    \chapter*{Resumo}
 
-%% % ---------------------------------------------------------------------------- %
-%% \chapter{Lista de Abreviaturas}
-%% \begin{tabular}{ll}
-%%          CFT         & Transformada contÌnua de Fourier (\emph{Continuous Fourier Transform})\\
-%%          DFT         & Transformada discreta de Fourier (\emph{Discrete Fourier Transform})\\
-%%         EIIP         & Potencial de interaÁ„o elÈtron-Ìon (\emph{Electron-Ion Interaction Potentials})\\
-%%         STFT         & Tranformada de Fourier de tempo reduzido (\emph{Short-Time Fourier Transform})\\
-%% \end{tabular}
+    Este trabalho se trata da implementa√ß√£o de um software que, a partir de uma entrada em linguagem
+    natural, (em Portugu√™s, mas podendo ser expandida em futuras itera√ß√µes) e gera um jogo onde
+    tudo que √© necess√°rio √© leitura, imagina√ß√£o e um computador.
 
-%% % ---------------------------------------------------------------------------- %
-%% \chapter{Lista de SÌmbolos}
-%% \begin{tabular}{ll}
-%%         $\omega$    & FrequÍncia angular\\
-%%         $\psi$      & FunÁ„o de an·lise \emph{wavelet}\\
-%%         $\Psi$      & Transformada de Fourier de $\psi$\\
-%% \end{tabular}
+    Tal programa ser√° desenvolvido em Ruby \footnote{assim como seus testes que usam RSpec}, dado a
+    praticidade ao lidar com express√µes rugulares e interpretadores de texto, indispens√°veis para
+    essa 'aventura'
+    \\
 
-%% % ---------------------------------------------------------------------------- %
-%% % Listas de figuras e tabelas criadas automaticamente
-%% \listoffigures            
-%% \listoftables            
+    \noindent \textbf{Palavras-chave:} ruby, ficcao-interetiva, rspec
 
+    % ---------------------------------------------------------------------------- %
+    % Abstract
+    \chapter*{Abstract}
 
+    This paper is about a software implementation. Its job is processing natural language, (in Portuguese
+    at first, but it can be expanded on future itarations) and return a game where everything you need is
+    reading, imagination and your computer.
 
-% ---------------------------------------------------------------------------- %
-% CapÌtulos do trabalho
-\mainmatter
+    This program will be written in Ruby \footnote{such as its tests that use RSpec}, because of the practicality
+    on handling with regular expressions and text interpreters, which are crucial for this 'adventure'
+    \\
 
-% cabeÁalho para as p·ginas de todos os capÌtulos
-\fancyhead[RE,LO]{\thesection}
-
-\singlespacing              % espaÁamento simples
-%\onehalfspacing            % espaÁamento um e meio
+    \noindent \textbf{Keywords:} ruby, interactive-ficction, rspec.
 
 
-\input cap-introducao        % associado ao arquivo: 'cap-introducao.tex'
-\input cap-desenvolvimentos  % associado ao arquivo: 'cap-desenvolvimento.tex'
-\input cap-conclusoes        % associado ao arquivo: 'cap-conclusoes.tex'
-
-% cabeÁalho para os apÍndices
-\renewcommand{\chaptermark}[1]{\markboth{\MakeUppercase{\appendixname\ \thechapter}} {\MakeUppercase{#1}} }
-\fancyhead[RE,LO]{}
-\appendix
-
-\include{ape-exemplo}      % associado ao arquivo: 'ape-conjuntos.tex'
+    % ---------------------------------------------------------------------------- %
+    % Sum√°rio
+    \tableofcontents    % imprime o sum√°rio
 
 
-% ---------------------------------------------------------------------------- %
-% Bibliografia
-\backmatter \singlespacing   % espaÁamento simples
-\bibliographystyle{plainnat-ime} % citaÁ„o bibliogr·fica textual
-\bibliography{bibliografia}  % associado ao arquivo: 'bibliografia.bib'
 
 
-%%%  ---------------------------------------------------------------------------- %
-%% % Õndice remissivo
-%% \index{TBP|see{periodicidade regi„o codificante}}
-%% \index{DSP|see{processamento digital de sinais}}
-%% \index{STFT|see{transformada de Fourier de tempo reduzido}}
-%% \index{DFT|see{transformada discreta de Fourier}}
-%% \index{Fourier!transformada|see{transformada de Fourier}}
+    %% % ---------------------------------------------------------------------------- %
+    %% \chapter{Lista de Abreviaturas}
+    %% \begin{tabular}{ll}
+    %%          CFT         & Transformada cont√≠nua de Fourier (\emph{Continuous Fourier Transform})\\
+    %%          DFT         & Transformada discreta de Fourier (\emph{Discrete Fourier Transform})\\
+    %%         EIIP         & Potencial de intera√ß√£o el√©tron-√≠on (\emph{Electron-Ion Interaction Potentials})\\
+    %%         STFT         & Tranformada de Fourier de tempo reduzido (\emph{Short-Time Fourier Transform})\\
+    %% \end{tabular}
 
-%% \printindex   % imprime o Ìndice remissivo no documento 
+    %% % ---------------------------------------------------------------------------- %
+    %% \chapter{Lista de S√≠mbolos}
+    %% \begin{tabular}{ll}
+    %%         $\omega$    & Frequ√™ncia angular\\
+    %%         $\psi$      & Fun√ß√£o de an√°lise \emph{wavelet}\\
+    %%         $\Psi$      & Transformada de Fourier de $\psi$\\
+    %% \end{tabular}
+
+    %% % ---------------------------------------------------------------------------- %
+    %% % Listas de figuras e tabelas criadas automaticamente
+    %% \listoffigures
+    %% \listoftables
+
+
+
+    % ---------------------------------------------------------------------------- %
+    % Cap√≠tulos do trabalho
+    \mainmatter
+
+    % cabe√ßalho para as p√°ginas de todos os cap√≠tulos
+    \fancyhead[RE,LO]{\thesection}
+
+    \singlespacing              % espa√ßamento simples
+    %\onehalfspacing            % espa√ßamento um e meio
+
+
+    \input cap-introducao        % associado ao arquivo: 'cap-introducao.tex'
+    \input cap-desenvolvimentos  % associado ao arquivo: 'cap-desenvolvimento.tex'
+    \input cap-conclusoes        % associado ao arquivo: 'cap-conclusoes.tex'
+
+    % cabe√ßalho para os ap√™ndices
+    \renewcommand{\chaptermark}[1]{\markboth{\MakeUppercase{\appendixname\ \thechapter}} {\MakeUppercase{#1}} }
+    \fancyhead[RE,LO]{}
+    \appendix
+
+    \include{ape-exemplo}      % associado ao arquivo: 'ape-conjuntos.tex'
+
+
+    % ---------------------------------------------------------------------------- %
+    % Bibliografia
+    \backmatter \singlespacing   % espa√ßamento simples
+    \bibliographystyle{plainnat-ime} % cita√ß√£o bibliogr√°fica textual
+    \bibliography{bibliografia}  % associado ao arquivo: 'bibliografia.bib'
+
+
+    %%%  ---------------------------------------------------------------------------- %
+    %% % √çndice remissivo
+    %% \index{TBP|see{periodicidade regi√£o codificante}}
+    %% \index{DSP|see{processamento digital de sinais}}
+    %% \index{STFT|see{transformada de Fourier de tempo reduzido}}
+    %% \index{DFT|see{transformada discreta de Fourier}}
+    %% \index{Fourier!transformada|see{transformada de Fourier}}
+
+    %% \printindex   % imprime o √≠ndice remissivo no documento
 
 \end{document}
