Monografia evoluindo 11/nov (tarde)

--- a/template/cap-introducao.tex
+++ b/template/cap-introducao.tex
@@ -12,7 +12,32 @@ jogador construir sua narrativa.
 Os livros não oferecem essa possibilidade, mas oferecem um bem ainda maior: o hábito da leitura que
 possibilita um ciclo virtuoso que envolve cultura e conhecimento e mais leitura. Seriam a diversão
 e a leitura inconsiliáveis? Essa proposta de trabalho busca provar que não. O software a ser desenvolvido
-permite que se criem aventuras de texto, também chamadas de ficção interativa que será explicada em mais detalhes .
+permite que se criem aventuras de texto, também chamadas de ficção interativa que será explicada em mais
+detalhes no capítulo sobre os conceitos principais.
+
+Essa solução tem dois objetivos: criar uma ferramenta de geração de aventuras de texto de uma forma que
+mesmo pessoas não familiarizadas com programação possam criar aventuras da forma como planejarem. Outro
+objetivo importantissimo a considerar é criar um atrativo a mais para o hábito da leitura. Como cientista
+da computação, não posso me arrogar a autoridade de dizer o que é ou não benéfico para crianças. Entretanto,
+acredito que trazer a interatividade dos jogos para leitura pode ter um potencial para incentivar o hábito
+da leitura.
+
+
+\section{Objetivos Específicos}
+\label{sec:goals}
+
+Aqui tratarei de todos os objetivos de forma específica e como pretendo cumpri-los.
+
+\textbf{Gerar divertimento}. O público desse software não é homogêneo. Tratam-se de pessoas criativas, mas não
+exatamente familiarizados com a tarefa de gerar código; mas também de quem for entrar nessas aventuras.
+
+Para o desenvolvedor, o atrativo será criar jogos de uma forma que deverá ser a mais intuitiva   
+
+\section{Metodologia}
+\label{sec:methodology}
+
+\section{Descrição dos capítulos}
+\label{sec:description}
 %Uma monografia deve ter um capï¿½tulo inicial que ï¿½ a Introduï¿½ï¿½o e um
 %capï¿½tulo final que ï¿½ a Conclusï¿½o. Entre esses dois capï¿½tulos poderï¿½
 %ter uma sequï¿½ncia de capï¿½tulos que descrevem o trabalho em detalhes.
