--- a/template/bibliografia.bib
+++ b/template/bibliografia.bib
@@ -1,4 +1,4 @@
-@Book{rcook:09,
+@Book{Rcook:09,
  author   = {Lucas Carlson and Leonard Richardson},
  title    = {Ruby Cookbook},
  edition  = {1ª},
@@ -20,14 +20,14 @@ About Writing Interactive Fiction But Couldn't Find Anyone Still Working Here to
   author = "Nick Montfort",
   title = "Interactive Fiction's Fourth Era",
   month = "Abril",
-  year = "2008"
+  year = "2008",
+  note = "Visitado em 09-11-2018"
  }
 
-
-@Book{Zil:95,
- author   = {Unkown},
- title    = {Learning ZIL - or - Everything You Always Wanted to Know
-About Writing Interactive Fiction But Couldn't Find Anyone Still Working Here to Ask},
- month    = Aug,
- year     = {1995}
+%
+@Misc{Zork,
+ howpublished = "\url{http://www.infocom-if.org/games/zork1/zork1.html}",
+ title = "Infocom Games - Zork I",
+ note = "Visitado em 11-11-2018. O ano de 1980 marca o lançamento do jogo, e não da página",
+ year = "1980"
 }
