--- a/template/cap-estado_arte.tex
+++ b/template/cap-estado_arte.tex
@@ -1,5 +1,5 @@
 %% ------------------------------------------------------------------------- %%
-\chapter{Desenvolvimentos}
+\chapter{Do Estado da Arte}
 \label{cap:desenvolvimentos}
 %
 %Embora neste exemplo tenhamos apenas um capítulo,  entre a introdução
