Capítulo 2 (finalmente) concluido 16/11

--- a/template/ape-exemplo.tex
+++ b/template/ape-exemplo.tex
@@ -1,5 +1,11 @@
-\chapter{TÃ­tulo do apÃªndice}
-\label{cap:ape}
+\chapter{Códigos}
+\label{cap:code}
+
+\section{Arquivos}
+\label{sec:files}
+
+\section{Testes}
+\label{sec:tests}
 
 Texto texto texto texto texto texto texto texto texto texto texto texto texto
 texto texto texto texto texto texto texto texto texto texto texto texto texto
