--- a/template/bibliografia.bib
+++ b/template/bibliografia.bib
@@ -8,26 +8,85 @@
 }
 
 @Book{Zil:95,
- author   = {Unkown},
+ author   = {SEM},
  title    = {Learning ZIL - or - Everything You Always Wanted to Know
-About Writing Interactive Fiction But Couldn't Find Anyone Still Working Here to Ask},
- month    = Aug,
- year     = {1995}
+  About Writing Interactive Fiction But Couldn't Find Anyone Still Working Here to Ask},
+ month    = {Aug},
+ note     = "O livro é creditado a SEM, mas não foi possível achar que seja essa pessoa",
+ year     = {1995},
 }
 
- @Misc{IF1,
+@Book{Eve:12,
+ author   = {Eric Eve},
+ title    = {Learning TADS 3},
+ month    = {May},
+ note     = "Livro digital nesse \href{http://www.tads.org/t3doc/doc/learning/Learning\%20T3.pdf}{\textbf{link}}",
+ year     = {2012},
+}
+
+@Book{Jim:06,
+ author   = {Jimmy Maher},
+ title    = {Let's Tell a Story Together (A History of Interactive Fiction)},
+ day      = {26},
+ month    = {Setembro},
+ note     = "Livro digital nesse \href{http://maher.filfre.net/if-book/}{\textbf{link}}. As figuras na sessão \ref{subsec:history} vem desse livro.",
+ year     = {2006}
+}
+
+@Misc{IF1,
   howpublished = "\url{http://nickm.com/if/fourth_era.html}",
   author = "Nick Montfort",
   title = "Interactive Fiction's Fourth Era",
   month = "Abril",
   year = "2008",
   note = "Visitado em 09-11-2018"
- }
+}
 
-%
 @Misc{Zork,
  howpublished = "\url{http://www.infocom-if.org/games/zork1/zork1.html}",
  title = "Infocom Games - Zork I",
  note = "Visitado em 11-11-2018. O ano de 1980 marca o lançamento do jogo, e não da página",
  year = "1980"
+}
+
+@Misc{IF2,
+   howpublished = "\url{http://www.tads.org/if.htm}",
+   title = "TADS - Interactive Fiction",
+   note = "Visitado em 12-11-2018.",
+   author = "Michael J. Roberts",
+   year = "2011"
+}
+
+@Article{Nel:06,
+  title     = "Natural language, semantic analysis and Interactive Fiction",
+  author    = "Graham Nelson",
+  month     = "Abril",
+  year      = "2006",
+  publisher = "St Anne’s College, Oxford"
+}
+
+@Misc{IF3,
+   howpublished = "\url{http://inform7.com/if/interactive-fiction/}",
+   title = "About Interactive Fiction",
+   note = "Visitado em 15-11-2018.",
+}
+
+@Misc{MDL,
+   howpublished = "\url{https://en.wikipedia.org/wiki/MDL_(programming_language)}",
+   title = "MDL (programming language)",
+   author = "Wiki",
+   note = "Dessa página extraiu-se somente a captura de tela apresentada na figura \ref{fig:zil}",
+}
+
+@Misc{LISP,
+   howpublished = "\url{https://emacs.stackexchange.com/questions/37220/highlight-labels-flet-macrolet-definitions-in-lisp-mode}",
+   title = "Highlight labels/flet/macrolet definitions in lisp-mode",
+   author = "StackExchange",
+   note = "Dessa página extraiu-se uma captura de tela apresentada na figura \ref{fig:zil}",
+}
+
+@Misc{Inf7,
+   howpublished = "\url{http://digitalhumanities.berkeley.edu/writing-interactive-fiction-inform-7}",
+   title = "Writing Interactive Fiction with Inform 7",
+   note = "Dessa página extraiu-se uma captura de tela apresentada na figura \ref{fig:zil}",
 }
