--- a/template/cap-conclusoes.tex
+++ b/template/cap-conclusoes.tex
@@ -2,8 +2,11 @@
 \chapter{Conclusões}
 \label{cap:conclusoes}
 
+
+
+
+section
 Texto texto texto texto texto texto texto texto texto texto texto texto texto
 texto texto texto texto texto texto texto texto texto texto texto texto texto
 texto texto texto texto texto texto\footnote{Exemplo de referência para página
 Web: \url{www.vision.ime.usp.br/~jmena/stuff/tese-exemplo}}.
-
