--- a/template/cap-proposta.tex
+++ b/template/cap-proposta.tex
@@ -1,2 +1,8 @@
 \chapter{Da Proposta}
 \label{cap:propose}
+
+\section{Qual é a proposta?}
+\label{sec:what_is}
+
+\section{Como funciona?}
+\label{sec:how-it-works}
