--- a/template/cap-resultados.tex
+++ b/template/cap-resultados.tex
@@ -1,2 +1,8 @@
 \chapter{Dos Resultados Obtidos}
 \label{cap:results}
+
+\section{O que foi feito?}
+\label{sec:to-be-done}
+
+\section{O que pode ser feito?}
+\label{sec:what-can-be-done}
