--- a/template/monografia_template.tex
+++ b/template/monografia_template.tex
@@ -38,6 +38,8 @@
 \usepackage[all]{hypcap}                    % soluciona o problema com o hyperref e capitulos
 \usepackage[round,sort,nonamebreak]{natbib} % citaÃ§Ã£o bibliogrÃ¡fica textual(plainnat-ime.bst)
 \usepackage{emptypage}  % para nÃ£o colocar nÃºmero de pÃ¡gina em pÃ¡gina vazia
+\usepackage{subfig}                     %sub-imagens
+
 \fontsize{60}{62}\usefont{OT1}{cmr}{m}{n}{\selectfont}
 
 % ---------------------------------------------------------------------------- %
@@ -254,7 +256,7 @@ framexrightmargin=10pt
 
     \input cap-introducao
     \input cap-conceitos
-    \input cap-estado_arte
+    %\input cap-estado_arte
     \input cap-proposta
     \input cap-resultados
     \input cap-conclusoes
