--- a/template/cap-introducao.tex
+++ b/template/cap-introducao.tex
@@ -1,90 +1,113 @@
 %% ------------------------------------------------------------------------- %%
-\chapter{Introdução}
+\chapter{Da Introdução}
 \label{cap:introducao}
 
-Com o advento de tecnologias  ligadas à indústria de games, é possível perceber uma contante
-preocupação com a imersão do jogador na história. Isso é ótimo, e o próprio autor se beneficia
-com experiências mais realistas. Mas fica uma pergunta: será que jogos de mundo aberto, muitas
-vezes capazes de transpor as barreiras temporais e espaciais poderão substituir os livros.
-Pessoalmente, espero que não aconteça, mas é inegável o apelo desse jogos: a possiblidade do
-jogador construir sua narrativa.
+Com o advento de tecnologias  ligadas a indústria de games, é possível perceber
+uma constante preocupação com a imersão do jogador na história. Isso é ótimo, e
+o próprio autor se beneficia com experiências mais realistas. Mas fica uma
+pergunta: será que jogos de mundo aberto, muitas vezes capazes de transpor as
+barreiras temporais e espaciais poderão substituir os livros? Pessoalmente,
+espero que não aconteça, mas é inegável o apelo desse jogos: a possiblidade do
+jogador construir sua própria narrativa.
 
-Os livros não oferecem essa possibilidade, mas oferecem um bem ainda maior: o hábito da leitura que
-possibilita um ciclo virtuoso que envolve cultura e conhecimento e mais leitura. Seriam a diversão
-e a leitura inconsiliáveis? Essa proposta de trabalho busca provar que não. O software a ser desenvolvido
-permite que se criem aventuras de texto, também chamadas de ficção interativa que será explicada em mais
-detalhes no capítulo sobre os conceitos principais.
+Os livros não oferecem essa possibilidade, mas oferecem um bem ainda maior: o
+hábito da leitura que possibilita um ciclo virtuoso que envolve cultura e
+conhecimento e mais leitura. Seriam a diversão e a leitura inconsiliáveis? Essa
+proposta de trabalho busca provar que não. O software a ser desenvolvido permite
+que se criem aventuras de texto, também chamadas de ficção interativa que será
+explicada em mais detalhes no capítulo sobre os conceitos principais.
 
-Essa solução tem dois objetivos: criar uma ferramenta de geração de aventuras de texto de uma forma que
-mesmo pessoas não familiarizadas com programação possam criar aventuras da forma como planejarem. Outro
-objetivo importantissimo a considerar é criar um atrativo a mais para o hábito da leitura. Como cientista
-da computação, não posso me arrogar a autoridade de dizer o que é ou não benéfico para crianças. Entretanto,
-acredito que trazer a interatividade dos jogos para leitura pode ter um potencial para incentivar o hábito
-da leitura.
-
-% Para mais detalhes, fica disponível neste \href{linux.ime.usp.br/\~andreluizas}{\textbf{link}} mais
-
+Essa solução tem dois objetivos: criar uma ferramenta de geração de aventuras de
+texto de uma forma que, mesmo pessoas não familiarizadas com programação possam
+criar aventuras da forma como planejarem. Outro objetivo importantíssimo a
+considerar é criar um atrativo a mais para o hábito da leitura. Como cientista
+da computação, não posso me atribuir a autoridade de dizer o que é ou não
+benéfico para crianças. Entretanto, acredito que trazer a interatividade dos
+jogos para leitura pode ter um enorme potencial para incentivar o hábito da
+leitura.
 
 \section{Objetivos Específicos}
 \label{sec:goals}
 
-Aqui tratarei de todos os objetivos de forma específica e como pretendo cumpri-los.
+Aqui tratarei de todos os objetivos de forma específica e como pretendo
+cumpri-los.
 
-\textbf{Gerar divertimento para o público} desse software. Este público não é homogêneo, e engloba
-pessoas criativas, mas não exatamente familiarizados com a tarefa de gerar código. Além desse grupo,
-há também aqueles que irão se divertir com as aventuras criadas.
+\textbf{Gerar divertimento para o público} desse software. Este público não é
+homogêneo, e engloba pessoas criativas, mas não exatamente familiarizadas com a
+tarefa de gerar código. Além desse grupo, há também aqueles que irão se divertir
+com as aventuras criadas.
 
-Para o desenvolvedor, o atrativo será criar jogos de uma forma que deverá ser a mais intuitiva possível.
-Para tal, inspirei-me no estilo de programar do \emph{RSpec}, e também na forma de estruturar os elementos
-do \emph{ZIL}. A ideia é trabalhar com blocos descritivos com tokens de começo e fim (que torne esses
-elementos o mais explícitos possível) e no meio destes somente pares de chaves e seus respectivos valores.
+Para o desenvolvedor, o atrativo será criar jogos de uma forma que deverá ser a
+mais intuitiva possível. Para tal, inspirei-me no estilo de programar do
+\emph{RSpec}, e também na forma de descrever os elementos do \emph{ZIL}. A ideia
+é trabalhar com blocos descritivos com tokens de começo e fim (que torne esses
+elementos o mais explícitos possível) e no meio destes somente pares de chaves e
+seus respectivos valores.
 
-Para o jogador é crucial resguardar a experiência de jogo de clássicos como as que se obtem na série de
-aventuras de texto \emph{Zork} \citep{Zork}. Uma ideia lançada pelo orientador permitira que se inserissem
-sons e planos de fundo ou imagens. É uma boa adição ao sistema, mas não é a prioridade.
+Para o jogador, é crucial que ele tenha a melhor experiência de jogo possível.
+Clássicos como a série de aventuras de texto \emph{Zork} \citep{Zork} são um bom
+exemplo. Uma ideia lançada pelo orientador permitira que se inserissem sons e
+planos de fundo ou imagens. É uma boa adição ao sistema, mas não é a prioridade.
 
-\textbf{Compartilhar conhecimento.} É fundamental que tudo o que for produzido nessa matéria fique disponível
-para que mais pessoas possam ter acesso a esse material, e que também possam contribuir no melhoramento do
-que estiver pronto, bem como na geração de novas \emph{features}.
+\textbf{Compartilhar conhecimento.} É fundamental que tudo o que for produzido
+nessa matéria fique disponível para que mais pessoas possam ter acesso a esse
+material, e que também possam contribuir no melhoramento do que estiver pronto,
+bem como na geração de novas \emph{features}.
 
-\textbf{Produzir uma \emph{gem}.} Seria uma forma de facilitar ainda mais a vida do usuário, ainda que este tipo
-específico esteja mais a vontade
+\textbf{Produzir uma \emph{gem}.} Seria uma forma de facilitar ainda mais a vida
+do usuário programador. Outra vantagem seria a de propagar mais facilmente o
+trabalho feito, atraindo,convidando mais mentes para a expansão desse projeto
+futuramente.
 
 \section{Metodologia}
 \label{sec:methodology}
 
-A metodologia seguida nesse trabalho consiste de alguns passos: \begin{enumerate}
+A metodologia seguida nesse trabalho consiste de alguns passos:
+\begin{enumerate}
   \item Leitura de textos sobre o assunto e conversa com o orientador.
   \item Planejamento da estrutura do sistema.
   \item Implementação do sistema
   \item Documentação do processo e descrição de tudo o que tange o item anterior
-  \item Se possível, criar uma documentação suficiente para a compreensão e utilização dessa ferramenta
+  \item Se possível, criar uma documentação suficiente para a compreensão e
+  utilização dessa ferramenta
 \end{enumerate}
 
-O item 1 foi o pontepé inicial dessa empreitada. Graças a meu orientador, grande fã de ficção interativa, não tive
-grandes problemas para me interar a respeito desse assunto. Meu maior desafio foi aprender uma linguagem para que
-eu pudesse ter uma ideia do estado da arte e ter um parâmetro pra criar as ferramentas. Entretanto, ao ler o livro
-\citet{Zil:95} indicado pelo professor, percebi que ela era bem parecida com LISP, que já era conhecida da matéria
-"Conceitos de linguagens de programação".
+O item 1 foi o pontepé inicial dessa empreitada. Graças a meu orientador, grande
+fã de ficção interativa, não tive grandes problemas para me interar a respeito
+deste assunto. Meu maior desafio, entretanto, foi aprender uma linguagem para
+que eu pudesse ter uma ideia do estado da arte e ter um parâmetro pra criar a
+ferramenta. Entretanto, ao ler o livro \citet{Zil:95} indicado pelo professor,
+percebi que ela era bem parecida com LISP, que já era conhecida da matéria
+"Conceitos de linguagens de programação". Tal semelhaça foi de inestimável ajuda
+para compreender aquela ferramenta.
 
-O passo 2 consiste na esquematização dos arquivos a serem criados. É fundamentalpara o planejamento do fluxo de
-trabalho a ser processado em tempo de execução.
+O passo 2 consiste na esquematização dos arquivos a serem criados. É fundamental
+para o planejamento do fluxo de trabalho a ser processado em tempo de execução.
 
-Os passos 3 e 4 acontecem nessa fase final, e acontecem de forma quase paralela. Tratam-se do coração da proposta feita
-meses antes. O passo 5 é decorrente de todos os anteriores e ficará pronto depois de pronto o software.
+Os passos 3 e 4 acontecem nessa fase final, e acontecem de forma quase paralela.
+Tratam-se do coração da proposta feita meses antes. O passo 5 é decorrente de
+todos os anteriores e ficará pronto depois de pronto o software.
 
 \section{Descrição dos capítulos}
 \label{sec:description}
 
-O capítulo 2, \textbf{dos conceitos principais} funciona como um cabeçalho de um programa. Tal comparação ocorre,
-pois nessa parte do código é onde ficam os comandos de importação de bibliotecas. Analogamente, no próximo capítulo,
-tratar-se-ão de conceitos relativos ao material a ser implementado, e do jargão a ser utilizado. Detalhes a serem
-esclarecidos para que o cérebro do leitor "compile", ou seja, compreenda, o conteúdo das páginas que se seguirão.
+O capítulo 2, \textbf{dos conceitos principais} funciona como um cabeçalho de um
+programa. Isso pois, nessa parte do código é onde ficam os comandos de
+importação de bibliotecas.
 
-No capítulo 3, \textbf{do estado da arte}, tratarei brevemente de outras formas de desenvolver Aventuras de Texto,
-comparando-as entre si e o que pretende-se criar neste projeto.
+Analogamente, no próximo capítulo, tratar-se-ão de conceitos relativos ao
+material a ser implementado, e do jargão a ser utilizado. Detalhes a serem
+esclarecidos para que o cérebro do leitor "compile" (em outras palavras,
+que ele compreenda) o conteúdo das páginas que se seguirão. Além disso, esse
+capítulo traz uma breve história da Ficção Interativa, e uma apresentação
+resumida das linguagens / ferramentas mais utilizadas (ZIL, Inform e TADS).
 
-No capítulo 4, \textbf{da proposta}, tratar-se-á de detalhes técnicos sobre a implementação. Soluções, partes do
-problema entre outros fatores cruciais pra que seja compreensível para o leitor como funciona o sistema de forma geral.
+No capítulo 3, \textbf{da proposta}, tratar-se-ão de detalhes técnicos sobre a
+implementação. Será uma descrição a dois níveis, sendo a primeira, uma descrição
+verbal, e o seguinte, a nível de implementação.
 
-No capítulo 5, \textbf{dos resultados obtidos}, encontra-se
+No capítulo 4, \textbf{dos resultados obtidos}, encontra-se uma reflexão sobre o
+que se passou além do código, o que está pronto e o que pode ser feito no futuro.
+
+O último capítulo, \textbf{das conclusões finais}, faz-se um resumo do que está
+documentado, destacando o que for mais conveniente.
